--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>SRWeaverTube</title>
 <style>
   body {
     background-color: black;
@@ -118,10 +119,10 @@
   <!-- Thumbnail images -->
   <div class="row">
     <div class="column">
-      <img src="/home/sarah/Videos/video_site/thumbnails/activist_girl.png" width="320px" height="240px">
+      <img src="https;//lwflouisa.github.io/SRWeaverTube/thumbnails/activist_girl.png" width="320px" height="240px">
     </div>
     <div class="column">
-      <img src="/home/sarah/Videos/video_site/thumbnails/off_black_3.png" width="320px" height="240px">
+      <img src="https://lwflouisa.github.io/SRWeaverTube/thumbnails/off_black_3.png" width="320px" height="240px">
     </div>
   </div>
 </div>
