--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 }
 </style>
 
+<a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a>
+<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a>
+
  <!-- Slideshow container -->
 <div class="slideshow-container">
 
