--- a/index.html
+++ b/index.html
@@ -93,53 +93,30 @@
 }
 </style>
 
-<a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a>
-<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a>
+<center><a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a><br />
+<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
+<a href="">Image Gallery</a></center><br />
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 7</div>
-    <center><iframe title="Uploaded Fairy Hemato's Story Prologue" src="https://video.ploud.jp/videos/embed/de6b6e1a-226a-4ac3-a8fc-61f2a5e8c9d4" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
+    <div class="numbertext">1 / 3</div>
+    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9Oja7LZCeoAaFoTCAI5Imll" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Chapter 1</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 7</div>
-    <center><iframe title="Uploaded Fairy" src="https://video.ploud.jp/video-playlists/embed/6f1c657d-c47c-45fc-b6cd-6806e2e92a75?playlistPosition=2" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
+    <div class="numbertext">2 / 3</div>
+    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9PbQUVRmSmv4HEszh6nMT47" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Chapter 2</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 7</div>
-    <center><iframe title="Uploaded Fairy" src="https://video.ploud.jp/video-playlists/embed/6f1c657d-c47c-45fc-b6cd-6806e2e92a75?playlistPosition=3" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
+    <div class="numbertext">3 / 3</div>
+    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9P5S26qEDKy9_UcAQ8ZqCzm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Chapter 3</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 7</div>
-    <center><iframe title="Uploaded Fairy" src="https://video.ploud.jp/video-playlists/embed/6f1c657d-c47c-45fc-b6cd-6806e2e92a75?playlistPosition=4" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
-    <div class="text">Chapter 4</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">5 / 7</div>
-    <center><iframe title="Uploaded Fairy" src="https://video.ploud.jp/video-playlists/embed/6f1c657d-c47c-45fc-b6cd-6806e2e92a75?playlistPosition=5" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
-    <div class="text">Chapter 5</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">6 / 7</div>
-    <center><iframe title="Uploaded Fairy" src="https://video.ploud.jp/video-playlists/embed/6f1c657d-c47c-45fc-b6cd-6806e2e92a75?playlistPosition=6" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
-    <div class="text">Chapter 5</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">7 / 7</div>
-    <center><iframe title="Uploaded Fairy" src="https://video.ploud.jp/video-playlists/embed/6f1c657d-c47c-45fc-b6cd-6806e2e92a75?playlistPosition=7" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="100%" height="100%" frameborder="0"></iframe></center>
-    <div class="text">Chapter 6</div>
   </div>
 
   <!-- Next and previous buttons -->
