--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 }
 </style>
 
+<h1>Uploaded Fairy TV</h1>
+<p>In a world where French-America and Japanese-America locked in civil war, an apprentice executioner torn
+between love and justice. We explore what led up to the civil unrest, to the aftermath eighty years in the
+future when America speaks a new dialect that blends Japanese and French.</p>
+
 <center><a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
 <a href="">Image Gallery</a></center><br />
