--- a/index.html
+++ b/index.html
@@ -94,9 +94,6 @@
 </style>
 
 <center><h1>Uploaded Fairy TV</h1>
-<p>In a world where French-America and Japanese-America locked in civil war, an apprentice executioner torn
-between love and justice. We explore what led up to the civil unrest, to the aftermath eighty years in the
-future when America speaks a new dialect that blends Japanese and French.</p></center>
 
 <center><a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
@@ -135,6 +132,10 @@ future when America speaks a new dialect that blends Japanese and French.</p></c
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
 </div> 
+
+<p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
+between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
+future when America speaks a new dialect that<br />blends Japanese and French.</p></center>  
 
 <script>
 let slideIndex = 1;
