--- a/index.html
+++ b/index.html
@@ -104,21 +104,27 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 4</div>
     <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9Oja7LZCeoAaFoTCAI5Imll" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-    <div class="text">Chapter 1</div>
+    <div class="text">Uploaded Fairy: Hemato's Story</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext">2 / 4</div>
     <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9PbQUVRmSmv4HEszh6nMT47" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-    <div class="text">Chapter 2</div>
+    <div class="text">Uploaded Fairy: Nadine's Story</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">3 / 4</div>
     <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9P5S26qEDKy9_UcAQ8ZqCzm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-    <div class="text">Chapter 3</div>
+    <div class="text">Uploaded Fairy: Nadine's Story P2</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <div class="text">My Short Stories</div>
   </div>
 
   <!-- Next and previous buttons -->
