--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">My Short Stories</div>
   </div>
 
@@ -137,6 +137,8 @@
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
 </div> 
 
 <p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
