--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <center><a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
-<a href="">Image Gallery</a></center><br />
+<iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe></center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -105,25 +105,25 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9Oja7LZCeoAaFoTCAI5Imll" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9Oja7LZCeoAaFoTCAI5Imll" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy: Hemato's Story</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
-    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9PbQUVRmSmv4HEszh6nMT47" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9PbQUVRmSmv4HEszh6nMT47" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy: Nadine's Story</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9P5S26qEDKy9_UcAQ8ZqCzm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9P5S26qEDKy9_UcAQ8ZqCzm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy: Nadine's Story P2</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <center><iframe width="100%" height="100%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">My Short Stories</div>
   </div>
 
