--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 <center><h1>Uploaded Fairy TV</h1>
 
 <center><a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a><br />
-<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
-<iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe></center>
+<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br /></center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -144,6 +143,8 @@
 <p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>  
+
+<center><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe></center></center>
 
 <script>
 let slideIndex = 1;
