--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>  
 
-<center><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe></center></center>
+<center><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe></center>
+<center><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318395889" ></iframe></center>
+<center> <iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318458086" ></iframe></center>
 
 <script>
 let slideIndex = 1;
