--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
   <span class="dot" onclick="currentSlide(4)"></span>
-</div> 
+</div>
+
+<p>Anticyberpunk - a genre of science fiction that, while set in an oppressive society, does not always take place purely in a lawless subculture but rather in normal every day life, while still dominated by computer technology. It maintains the bleak aesthetic of cyberpunk.</p>
 
 <p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
