--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 <center><h1>Uploaded Fairy TV</h1>
 
 <center><a href="https://ipfs.io/ipfs/QmYznDUkp4ST8VbTyUvDqAnT2Ci7M3zYGX542h5F1nybZa">Hypermedia Comic</a><br />
-<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br /></center>
+<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
+<a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a></center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
