--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <center><h1>Uploaded Fairy TV</h1>
 
-<center><a href="https://ipfs.io/ipfs/QmPChi5eXvApHdSvNBjPgag1bVw2DLV1CP77ut5tHe8YRG">Hypermedia Comic</a><br />
+<center><a href="https://lwflouisa.github.io/OwnTune/">OwnTune: Podcast Website</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a></center>
 
