--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
 <center><a href="https://lwflouisa.github.io/OwnTune/">OwnTune: Podcast Website</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
-<a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a></center>
+<a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
+<a href="https://twitter.com/FlouisaLw"></center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
