--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <center><a href="https://lwflouisa.github.io/OwnTune/">OwnTune: Podcast Website</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
-<a href="https://twitter.com/FlouisaLw"></center>
+<a href="https://twitter.com/FlouisaLw">Twitter</center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
