--- a/index.html
+++ b/index.html
@@ -150,10 +150,8 @@
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>  
 
-<center><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe></center>
-<center><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318395889" ></iframe></center>
-<center> <iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318458086" ></iframe></center>
-
+<a href="https://www.pixiv.net/novel/show.php?id=18200599">Read My Light Novel</a>
+  
 <script>
 let slideIndex = 1;
 showSlides(slideIndex);
