--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
   
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
+    <center><iframe title="Learn Ahusacos" width="75%" height="75%" src="https://video.ploud.jp/video-playlists/embed/ca88d839-ab01-4360-8856-0580819e2881" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
+    <div class="text">Learn Ahusacos</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
     <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">My Short Stories</div>
   </div>
