--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   
   <div class="mySlides fade">
     <div class="numbertext">5 / 5</div>
-    <iframe title="Piano Practice" width="560" height="315" src="https://video.ploud.jp/video-playlists/embed/729d422d-ec42-4b03-806d-72917699fd30" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+    <iframe title="Piano Practice" width="75%" height="75%" src="https://video.ploud.jp/video-playlists/embed/729d422d-ec42-4b03-806d-72917699fd30" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
     <div class="text">Piano Practice</div>
   </div>
 
