--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>  
 
-<a href="https://www.pixiv.net/novel/show.php?id=18200599">Read My Light Novel</a>
+<a href="https://www.pixiv.net/novel/show.php?id=18200599">Read My Light Novel</a><br />
+<a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a><br />
+<a href="https://srweaver.carrd.co/">Business Card</a><br />
+  
   
 <script>
 let slideIndex = 1;
