--- a/index.html
+++ b/index.html
@@ -105,40 +105,46 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 5</div>
+    <div class="numbertext">1 / 6</div>
     <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9Oja7LZCeoAaFoTCAI5Imll" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy: Hemato's Story</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 5</div>
+    <div class="numbertext">2 / 6</div>
     <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9PbQUVRmSmv4HEszh6nMT47" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy: Nadine's Story</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 5</div>
+    <div class="numbertext">3 / 6</div>
     <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9P5S26qEDKy9_UcAQ8ZqCzm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy: Nadine's Story P2</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">4 / 5</div>
+    <div class="numbertext">4 / 6</div>
     <center><iframe width="75%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLcpDrb3S0v9MNLI3C8JC7KGXEbxPBFXvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="text">My Short Stories</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">4 / 5</div>
+    <div class="numbertext">4 / 6</div>
     <center><iframe title="Learn Ahusacos" width="75%" height="75%" src="https://video.ploud.jp/video-playlists/embed/ca88d839-ab01-4360-8856-0580819e2881" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">Learn Ahusacos</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">5 / 5</div>
+    <div class="numbertext">5 / 6</div>
     <iframe title="Piano Practice" width="75%" height="75%" src="https://video.ploud.jp/video-playlists/embed/729d422d-ec42-4b03-806d-72917699fd30" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
     <div class="text">Piano Practice</div>
   </div>
+  
+   <div class="mySlides fade">
+    <div class="numbertext">6 / 6</div>
+    <iframe title="Reading Uploaded Fairy" width="75%" height="75%" src="https://video.ploud.jp/video-playlists/embed/5cf29479-cdc4-474a-8165-2ae57a00fb7d" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+    <div class="text">Reading Uploaded Fairy</div>
+  </div> 
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
