--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
   
   <div class="mySlides fade">
     <div class="numbertext">1 / 2</div>
-    <center><iframe width="75%" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_AreTje6fhjSHf9CWybIu77" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><div class="text">My Short Stories</div></center>
+    <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_AreTje6fhjSHf9CWybIu77" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><div class="text">My Short Stories</div></center>
     <div class="text">Uploaded Fairy Audiobook</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">2 / 2</div>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_D3qdDBTT6wmG6T2v3vt1NF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+    <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_D3qdDBTT6wmG6T2v3vt1NF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
     <div class="text">My Short Stories</div>
   </div>
 
