--- a/index.html
+++ b/index.html
@@ -106,23 +106,29 @@
   <!-- Full-width images with number and caption text -->
   
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 4</div>
     <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_AreTje6fhjSHf9CWybIu77" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><div class="text">My Short Stories</div></center>
     <div class="text">Uploaded Fairy Audiobook</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext">2 / 4</div>
     <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_D3qdDBTT6wmG6T2v3vt1NF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
     <div class="text">My Short Stories</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">3 / 4</div>
     <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PL7snxnQ2F7F4CJQn-xGxd4OKj08CaDrv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
-    <div class="text">My Short Stories</div>
+    <div class="text">Uploaded Fairy OST</div>
   </div>
-
+  
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
+    <center><iframe title="Shorts" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/ea80a65b-dddd-4b50-b9f2-e6211813a8e1" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
+    <div class="text">My Piano Practice Shorts</div>
+  </div>
+    
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
