--- a/index.html
+++ b/index.html
@@ -184,5 +184,7 @@ function showSlides(n) {
   captionText.innerHTML = dots[slideIndex-1].alt;
 }
 </script>
+  
+<script src="https://cdn.counter.dev/script.js" data-id="67dce6be-123b-4b00-9afb-7979dee1c804" data-utcoffset="-6"></script>
 
 <script src="https://cdn.counter.dev/script.js" data-id="67dce6be-123b-4b00-9afb-7979dee1c804" data-utcoffset="-6"></script>
