--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <center><a href="https://lwflouisa.github.io/OwnTune/">OwnTune: Podcast Website</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
-<a href="https://twitter.com/FlouisaLw">Twitter</center>
+<a href="https://lwflouisa.github.io/MyDiscography">My Discography</a></center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -125,7 +125,7 @@
   
   <div class="mySlides fade">
     <div class="numbertext">4 / 6</div>
-    <center><iframe title="Ahusacos Quintet" width="560" height="315" src="https://video.ploud.jp/video-playlists/embed/4f69a18b-58d7-46de-8203-b972742675c3" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
+    <center><iframe title="Ahusacos Quintet" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/4f69a18b-58d7-46de-8203-b972742675c3" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">Ahusacos Quintet</div>
   </div>
 
