--- a/index.html
+++ b/index.html
@@ -95,10 +95,14 @@
 
 <center><h1>Uploaded Fairy TV</h1>
 
-<center><a href="https://lwflouisa.github.io/OwnTune/">OwnTune: Podcast Website</a><br />
+<center><a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
-<a href="https://lwflouisa.github.io/MyDiscography">My Discography</a></center>
+<a href="https://lwflouisa.github.io/MyDiscography">My Discography</a><br />
+<a href="https://www.pixiv.net/novel/show.php?id=18200599">Read My Light Novel</a><br />
+<a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a><br />
+<a href="https://srweaver.carrd.co/">Business Card</a>
+</center>
 
  <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -159,11 +163,7 @@
 
 <p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
-future when America speaks a new dialect that<br />blends Japanese and French.</p></center>  
-
-<a href="https://www.pixiv.net/novel/show.php?id=18200599">Read My Light Novel</a><br />
-<a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a><br />
-<a href="https://srweaver.carrd.co/">Business Card</a><br />
+future when America speaks a new dialect that<br />blends Japanese and French.</p></center>
   
   
 <script>
