--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
 
 <center><h1>Uploaded Fairy TV</h1>
 
+<center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a></center>
+  
 <center><a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
 <a href="https://lwflouisa.github.io/MyDiscography">My Discography</a><br />
-<a href="https://www.pixiv.net/novel/show.php?id=18200599">Read My Light Novel</a><br />
+<a href="https://lwflouisa.github.io/UploadedFairyOELN/">Read My Light Novel</a><br />
 <a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a><br />
 <a href="https://srweaver.carrd.co/">Business Card</a>
 </center>
