--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
 <a href="https://lwflouisa.github.io/MyDiscography">My Discography</a><br />
 <a href="https://lwflouisa.github.io/UploadedFairyOELN/">Read My Light Novel</a><br />
+<a href="https://lwflouisa.github.io/OldPages/SideNovels/">Read My Side Novels</a>
+<a href="https://lwflouisa.github.io/Poetry/">Read My Poetry</a>
 <a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a><br />
 <a href="https://srweaver.carrd.co/">Business Card</a>
 </center>
