--- a/index.html
+++ b/index.html
@@ -95,20 +95,21 @@
 
 <center><h1>Uploaded Fairy TV</h1>
 
-<center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a></center>
-  
-<center><a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a><br />
-<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a><br />
-<a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a><br />
-<a href="https://lwflouisa.github.io/MyDiscography">My Discography</a><br />
-<a href="https://lwflouisa.github.io/UploadedFairyOELN/">Read My Light Novel</a><br />
-<a href="https://lwflouisa.github.io/OldPages/SideNovels/">Read My Side Novels</a>
-<a href="https://lwflouisa.github.io/Poetry/">Read My Poetry</a>
-<a href="https://lwflouisa.github.io/FraponicFont/">My Conlang Font</a>
-<a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a><br />
+---
+<center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a> |
+<a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a> |
+<a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a> |
+<a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a> |
+<a href="https://lwflouisa.github.io/MyDiscography">My Discography</a> |
+<a href="https://lwflouisa.github.io/UploadedFairyOELN/">Read My Light Novel</a> |
+<a href="https://lwflouisa.github.io/OldPages/SideNovels/">Read My Side Novels</a> |
+<a href="https://lwflouisa.github.io/Poetry/">Read My Poetry</a> |
+<a href="https://lwflouisa.github.io/FraponicFont/">My Conlang Font</a> |
+<a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a> |
 <a href="https://srweaver.carrd.co/">Business Card</a>
 </center>
-
+---
+  
  <!-- Slideshow container -->
 <div class="slideshow-container">
 
