--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     background-color: black;
     color: lime;
   }
+  
+  border {
+    color: lime;
+  }
 
 * {box-sizing:border-box}
 
@@ -95,8 +99,7 @@
 
 <center><h1>Uploaded Fairy TV</h1>
 
----
-<center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a> |
+<border><center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a> |
 <a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a> |
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a> |
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a> |
@@ -107,8 +110,7 @@
 <a href="https://lwflouisa.github.io/FraponicFont/">My Conlang Font</a> |
 <a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a> |
 <a href="https://srweaver.carrd.co/">Business Card</a>
-</center>
----
+</center></border>
   
  <!-- Slideshow container -->
 <div class="slideshow-container">
