--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
 <p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>
+
+<iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/316677699" ></iframe><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318395889" ></iframe>
   
   
 <script>
