--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ between love and justice. We explore<br />what led up to the civil unrest, to th
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>
 
 <iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318388736" ></iframe><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/316677699" ></iframe>
-<iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318395889" ></iframe>
+<iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/318395889" ></iframe><iframe width="500" height="280" frameborder="0" allowfullscreen="" src="https://embed.wattpad.com/story/263103426" ></iframe>
   
   
 <script>
