--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 <border><center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a> |
 <a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a> |
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a> |
+<a href="https://lwflouisa.github.io/UploadedFairyTV/OldArt/">Old Version</a>
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a> |
 <a href="https://lwflouisa.github.io/MyDiscography">My Discography</a> |
 <a href="https://lwflouisa.github.io/UploadedFairyOELN/">Read My Light Novel</a> |
