--- a/avatar.html
+++ b/avatar.html
@@ -2,6 +2,18 @@
   <head>
     <title><My Lifenaut/title>
     <style>
+      body {
+        background-color: black;
+        color: lime;
+      }
+  
+      border {
+        color: lime;
+      }
+      
+      h1, h2, h3, h4, h5, h6, p, pre, hr {
+        color: lime;
+      }
     </style>
   </head>
   <body>
