--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <center><h1>Uploaded Fairy TV</h1>
 
 <border><center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a> |
+<a href="https://lwflouisa.github.io/UploadedFairyTV/avatar.html">Avatar</a> |
 <a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a> |
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a> |
 <a href="https://lwflouisa.github.io/UploadedFairyTV/OldArt/">Old Version</a>
