--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ future when America speaks a new dialect that<br />blends Japanese and French.</
 <p>Also I may have some unconvential theories some may call conspiracy theories, but a conspiracy theory is just a
   buzzword for secrets the government doesn't want to be leaked.</p></center>
 
-<iframe scrolling="no" id="hearthis_at_user_359695-10593202" width="100%" height="350" src="https://hearthis.at/set/359695-10593202/embed/ZKzuX/" frameborder="0" allowtransparency allow="autoplay"></iframe>
+<p>My Podcast Can Be Found Here: <a href="https://lwflouisa.github.io/UploadedFairyRadio/">Podcast</a></p>
 
 <script>
 let slideIndex = 1;
