--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ future when America speaks a new dialect that<br />blends Japanese and French.</
 <p>Also I may have some unconvential theories some may call conspiracy theories, but a conspiracy theory is just a
   buzzword for secrets the government doesn't want to be leaked.</p></center>
 
-<p>My Podcast Can Be Found Here: <a href="https://lwflouisa.github.io/UploadedFairyRadio/">Podcast</a></p>
+<p>My Podcast Can Be Found Here: <a href="https://lwflouisa.github.io/UploadedFairyRadio/archive.html">Podcast</a></p>
 
 <script>
 let slideIndex = 1;
