--- a/index.html
+++ b/index.html
@@ -101,16 +101,19 @@
 
 <border><center><a href="https://lwflouisa.github.io/OldPages/">Old Website [ Transferring Things ]</a> |
 <a href="https://lwflouisa.github.io/UploadedFairyTV/avatar.html">Avatar</a> |
-<a href="https://www.webtoons.com/en/challenge/uploaded-fairy-hematos-story/list?title_no=743666">Webtoon</a> |
+<a href="https://www.webtoons.com/en/canvas/uploaded-fairy/list?title_no=906494">Webtoon</a> |
 <a href="https://lwflouisa.github.io/UploadedFairy">Standard Webcomic</a> |
 <a href="https://lwflouisa.github.io/UploadedFairyTV/OldArt/">Old Version</a>
 <a href="https://lwflouisa.github.io/SRWeaverPortfolio/">Portfolio</a> |
 <a href="https://lwflouisa.github.io/MyDiscography">My Discography</a> |
 <a href="https://lwflouisa.github.io/UploadedFairyOELN/">Read My Light Novel</a> |
 <a href="https://lwflouisa.github.io/OldPages/SideNovels/">Read My Side Novels</a> |
-<a href="https://lwflouisa.github.io/Poetry/">Read My Poetry</a> |
+<a href="https://lwflouisa.github.io/OldPoetry/">Read My Old Poetry</a> |
+<a href="https://lwflouisa.github.io/NewPoetry/">Read My New Poetry</a> |
+<a href="https://lwflouisa.github.io/SidePoetry/">Read My Side Poetry</a> |
 <a href="https://lwflouisa.github.io/FraponicFont/">My Conlang Font</a> |
-<a href="https://www.pinterest.com/sarahmattheww/ahusacos-studios/">Other Information About Me</a> |
+<a href="https://lwflouisa.github.io/FraponicStatic/">Learn My Conlang</a> |
+<a href="https://lwflouisa.github.io/PinPalette/">Read My Pin Palette</a> |
 <a href="https://srweaver.carrd.co/">Business Card</a>
 </center></border>
   
