--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <a href="https://lwflouisa.github.io/FraponicFont/">My Conlang Font</a> |
 <a href="https://lwflouisa.github.io/FraponicStatic/">Learn My Conlang</a> |
 <a href="https://lwflouisa.github.io/PinPalette/">Read My Pin Palette</a> |
-<a href="https://srweaver.carrd.co/">Business Card</a>
+<a href="https://lwflouisa.github.io/SRWeaver">Business Card</a>
 </center></border>
   
  <!-- Slideshow container -->
