--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <div class="mySlides fade">
     <div class="numbertext">10 / 10</div>
     <center><iframe title="Chant De Fleur" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/ec164905-99e3-4a87-a5a4-328014a8d42a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
-    <div class="text">IMPUnit Podcasts</div>
+    <div class="text">Chant De Fleur: Old Poetry</div>
   </div>
     
   <!-- Next and previous buttons -->
